[tool.poetry]
name = "popular-sites"
version = "0.1.0"
description = ""
authors = ["David ONeill <mrdavidoneillll@gmail.com>"]
readme = "README.md"
packages = [{include = "popular_sites"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
